# fun

./: .gitignore
Backtracking/: ._Backtracking _ Introduction - GeeksforGeeks.htm  Backtracking _ Introduction - GeeksforGeeks.htm  main.cpp
Backtracking/Backtracking _ Introduction - GeeksforGeeks_files/: jsapi  saved_resource(1).html  saved_resource.html
Backtracking/Knight Tour/: ._Backtracking _ Set 1 (The Knight's tour problem) - GeeksforGeeks.htm  Backtracking _ Set 1 (The Knight's tour problem) - GeeksforGeeks.htm
Backtracking/header/: Sudoku.hpp
Birds and maximum food gathering/: main.py
Branch and Bound/: ._Branch and Bound _ Set 1 (Introduction with 0_1 Knapsack) - GeeksforGeeks.htm  Branch and Bound _ Set 1 (Introduction with 0_1 Knapsack) - GeeksforGeeks.htm
Cracking/16.Moderate/: CMakeLists.txt  main.cpp
Cracking/16.Moderate/header/: LRU_cache.hpp
Cracking/16.Moderate/src/: LRU_cache.cpp
Finding No. of pair given k diffenrence/: ._Count all distinct pairs with difference equal to k - GeeksforGeeks.htm  Count all distinct pairs with difference equal to k - GeeksforGeeks.htm  main.py
Inplace Rotate Matrix 90 Degree/: ._Inplace rotate square matrix by 90 degrees _ Set 1 - GeeksforGeeks.htm  Inplace rotate square matrix by 90 degrees _ Set 1 - GeeksforGeeks.htm  main.py
Look and Say Sequence/: ._Look-and-Say Sequence - GeeksforGeeks.htm  Look-and-Say Sequence - GeeksforGeeks.htm  main.py
Quiz/: main  main.cpp
Rearrange a string/: ._Rearrange a string _ Practice _ GeeksforGeeks.htm  Rearrange a string _ Practice _ GeeksforGeeks.htm  main.py
(+149 files in other folders)
